# template-py

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt
ipython_startup/: 00-profile-template.py
