[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "template-pkg"
dynamic = ["version"]
dependencies = [
    "pyyaml",
    "traitlets",
]
requires-python = ">= 3.11"
description = "Template Package"
readme = "README.md"
license = {text = "GEDI Labs, no distribution, All Rights Reserved"}

[tool.setuptools]                                                                                                                 
package-dir = {"" = "src"}                                                                                                        
packages = ['template-pkg.core']  

[project.urls]
Homepage = "https://template-pkg.io"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/gedilabs/template-pkg.git"

